--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
 </head>
 <body>
     <header>
-        <h1>Long & Hiền</h1>
+        <h1>Bùi Thành Long & Dương Thị Hiền</h1>
         <p>Trân trọng kính mời bạn đến dự lễ cưới của chúng tôi.</p>
     </header>
 
     <section>
         <h2>Lời mời</h2>
-        <p class="date">Thứ Bảy, 15 Tháng 11, 2025</p>
+        <p class="date">Chủ Nhật, ngày 30 tháng 11, 2025 (ngày 11 tháng 10 Âm lịch)</p>
         <p>Chúng tôi hân hoan mời bạn đến chung vui cùng gia đình trong ngày trọng đại này.</p>
-        <p>📍 Địa điểm: Rose Garden Hall, TP. Hồ Chí Minh</p>
+        <p>📍 Địa điểm: Làng La Ngoại, xã Thanh Miện, tỉnh Hải Phòng</p>
         <a href="https://maps.google.com" class="button">Xem bản đồ</a>
     </section>
 
@@ -124,7 +124,7 @@
 
     <section>
         <h2>Hồi âm (RSVP)</h2>
-        <p>Vui lòng cho chúng tôi biết trước ngày 20/10/2025</p>
+        <p>Vui lòng cho chúng tôi biết trước ngày 25/11/2025</p>
         <a href="mailto:youremail@example.com" class="button">Gửi phản hồi</a>
     </section>
 
