--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiệp Cưới Long & Hiền</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Playfair+Display&family=Great+Vibes&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Playfair+Display&family=Great+Vibes&family=Monsieur+La+Doulaise&family=Nunito&display=swap" rel="stylesheet">
     <style>
         * {
             box-sizing: border-box;
@@ -18,7 +18,7 @@
             color: #2f3b52;
             text-align: center;
             overflow-x: hidden;
-            padding-bottom: 50px;
+            padding-bottom: 100px;
         }
 
         /* === Hero Section === */
@@ -29,8 +29,8 @@
             background: url("https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=1000&q=80") center/cover no-repeat;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end; /* push content to bottom */
-            align-items: center; /* center horizontally */
+            justify-content: flex-end;
+            align-items: center;
             color: white;
             padding-bottom: 10px;
         }
@@ -63,14 +63,14 @@
             }
         }
 
-        /* === Quote under hero === */
+        /* === Quote === */
         .quote {
             font-size: 18px;
             letter-spacing: 1px;
             color: #00417A;
             margin-top: 20px;
             margin-bottom: 50px;
-            padding: 0px 40px 0px 40px;
+            padding: 0 40px;
             font-weight: bold;
             animation: fadeIn 2.2s ease;
         }
@@ -85,7 +85,7 @@
             }
         }
 
-        /* === Content Section === */
+        /* === Content === */
         .content {
             max-width: 650px;
             margin: 0 auto;
@@ -96,7 +96,7 @@
             font-family: 'Monsieur La Doulaise', cursive;
             font-size: 26px;
             color: #aa7c7c;
-            margin-bottom: 8px;
+            margin-bottom: -5px;
             font-weight: bold;
         }
 
@@ -107,31 +107,18 @@
             margin-bottom: 30px;
         }
 
-        .divider {
-            width: 80px;
-            height: 2px;
-            background: #aa7c7c;
-            margin: 20px auto;
-            border-radius: 2px;
-        }
-
         /* === Calendar Section === */
         .calendar {
-            background: rgba(240, 230, 220, 0.45);
-            border: 1px solid #ddd;
+            background: rgba(255, 255, 255, 0.55);
+            border: 1px solid rgba(255, 255, 255, 0.3);
             border-radius: 16px;
-            padding: 16px;
+            padding: 20px;
             width: 100%;
-            margin-top: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-            backdrop-filter: blur(3px);
+            margin-top: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08), 0 10px 20px rgba(0, 0, 0, 0.06), inset 0 1px 1px rgba(255, 255, 255, 0.4);
+            backdrop-filter: blur(6px);
+            -webkit-backdrop-filter: blur(6px);
         }
-
-            .calendar strong {
-                font-family: 'Playfair Display', serif;
-                font-size: 18px;
-                color: #5b5b5b;
-            }
 
         table {
             width: 100%;
@@ -160,10 +147,30 @@
             }
 
         .heart {
-            color: #e63946;
-            font-size: 22px;
+            position: relative;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            width: 32px;
+            height: 32px;
+            font-size: 24px;
+            color: rgba(230, 57, 70, 1);
             animation: pulse 1.4s infinite;
         }
+
+            .heart::before {
+                content: "❤️";
+                position: absolute;
+                font-size: 28px;
+                opacity: 0.5;
+            }
+
+            .heart span {
+                position: relative;
+                font-size: 12px;
+                font-weight: bold;
+                color: white;
+            }
 
         @keyframes pulse {
             0%, 100% {
@@ -177,29 +184,205 @@
             }
         }
 
-        /* === Footer Section === */
-        footer {
-            margin-top: 60px;
-            color: #2f3b52;
+        /* === Invitation Section === */
+        .invitation {
+            margin-top: 80px;
         }
 
-            footer h4 {
+            .invitation h4 {
                 font-size: 15px;
                 letter-spacing: 1px;
-                color: #888;
+                color: #00417A;
+                margin-bottom: 25px;
+            }
+
+            .invitation h2 {
+                font-size: 36px;
+                color: #1f355e;
+                line-height: 1.4;
+                font-weight: 700;
+            }
+
+                .invitation h2 span {
+                    font-family: 'Great Vibes', cursive;
+                    font-size: 60px;
+                    color: #5a7ea1;
+                    display: inline-block;
+                    transform: translateY(-6px);
+                }
+
+        .photos {
+            margin-top: 40px;
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+        }
+
+            .photos img {
+                width: 150px;
+                height: 175px;
+                border-radius: 8px;
+                box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+                transition: transform 0.5s ease;
+            }
+
+                .photos img:first-child {
+                    transform: rotate(-12deg) translate(15px, 30px);
+                    z-index: 1;
+                }
+
+                .photos img:last-child {
+                    transform: rotate(8deg) translate(-15px, 0px);
+                    z-index: 0;
+                }
+
+                .photos img:hover {
+                    transform: scale(1.05);
+                }
+
+        /* === Wedding Info Section === */
+        .wedding-info {
+            background: #ffffff;
+            border-radius: 10px;
+            padding: 30px 20px;
+            margin: 70px auto 0;
+            max-width: 380px;
+            text-align: center;
+            color: #1f355e;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+            border: 1px solid rgba(0,0,0,0.05);
+        }
+
+            .wedding-info .time-text {
+                font-size: 15px;
+                line-height: 1.6;
+                letter-spacing: 0.5px;
+                font-weight: 600;
+                color: #2b4e7c;
                 margin-bottom: 18px;
             }
 
-            footer h2 {
-                font-size: 28px;
-                line-height: 1.6;
+            .wedding-info h3 {
+                font-size: 22px;
+                font-weight: 800;
+                letter-spacing: 1px;
+                color: #2b4e7c;
+                margin-bottom: 12px;
+                font-family: 'Nunito', serif;
             }
 
-            footer span {
-                font-family: 'Great Vibes', cursive;
-                font-size: 44px;
-                color: #aa7c7c;
+        .date-box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 14px;
+            font-family: 'Playfair Display', serif;
+            color: #1f355e;
+            margin-bottom: 8px;
+        }
+
+            .date-box .month,
+            .date-box .year {
+                font-size: 15px;
+                font-weight: bold;
+                border-top: 1px solid #b0c1d9;
+                border-bottom: 1px solid #b0c1d9;
+                padding: 6px 10px;
+                letter-spacing: 1px;
+                font-family: 'Nunito', serif;
             }
+
+            .date-box .day {
+                font-size: 54px;
+                font-weight: 700;
+                color: #1f355e;
+                line-height: 1;
+                font-family: 'Nunito', serif;
+            }
+
+        .lunar {
+            font-size: 14px;
+            color: #7a8ba8;
+            margin-top: 6px;
+            margin-bottom: 28px;
+        }
+
+        .place-title {
+            font-size: 15px;
+            font-weight: 700;
+            color: #1f355e;
+            margin-bottom: 8px;
+            letter-spacing: 1px;
+        }
+
+        .address {
+            font-size: 14px;
+            color: #4a5c7a;
+            margin-bottom: 22px;
+        }
+
+        .map-btn {
+            display: inline-block;
+            background: #ffffff;
+            color: #2b4e7c;
+            border: 2px solid #2b4e7c;
+            padding: 8px 20px;
+            border-radius: 25px;
+            font-weight: 700;
+            text-decoration: none;
+            font-size: 14px;
+            letter-spacing: 1px;
+            transition: all 0.25s ease;
+        }
+
+            .map-btn:hover {
+                background: #2b4e7c;
+                color: #fff;
+            }
+
+        /* === Scroll Animations === */
+        .reveal {
+            opacity: 0;
+            transform: translateY(40px);
+            transition: all 1s ease;
+        }
+
+            .reveal.visible {
+                opacity: 1;
+                transform: translateY(0);
+            }
+
+        .fade-up.visible {
+            animation: fadeUpAnim 1.2s ease forwards;
+        }
+
+        @keyframes fadeUpAnim {
+            from {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .zoom-in.visible {
+            animation: zoomIn 1.2s ease forwards;
+        }
+
+        @keyframes zoomIn {
+            from {
+                opacity: 0;
+                transform: scale(0.85);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
 <body>
@@ -212,10 +395,9 @@
 
     <div class="content">
         <div class="save-date">Save the Date</div>
-        <div class="divider"></div>
         <div class="date">30 . 11 . 2025</div>
 
-        <div class="calendar">
+        <div class="calendar reveal fade-up">
             <strong>Tháng 11 / 2025</strong>
             <table>
                 <tr><th>MON</th><th>TUE</th><th>WED</th><th>THU</th><th>FRI</th><th>SAT</th><th>SUN</th></tr>
@@ -223,15 +405,50 @@
                 <tr><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td></tr>
                 <tr><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr>
                 <tr><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td></tr>
-                <tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td><span class="heart">❤️</span></td><td>30</td></tr>
+                <tr><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td><div class="heart"><span>30</span></div></td></tr>
             </table>
         </div>
 
-        <footer>
-            <h4>TRÂN TRỌNG KÍNH MỜI</h4>
+        <div class="invitation reveal fade-up">
+            <h4>THÂN MỜI ĐẾN DỰ LỄ CƯỚI THÂN MẬT CỦA CHÚNG TÔI</h4>
             <h2>THÀNH LONG<br><span>&</span><br>DƯƠNG HIỀN</h2>
-        </footer>
+            <div class="photos reveal zoom-in">
+                <img src="https://cdn.cinelove.me/uploads/b6f19e05-b42b-4cbc-add1-0b96a6ff4035/028d7afe-7e49-4874-8f65-f0910f1f141b.jpg" alt="Photo 1">
+                <img src="https://cdn.cinelove.me/uploads/b6f19e05-b42b-4cbc-add1-0b96a6ff4035/028d7afe-7e49-4874-8f65-f0910f1f141b.jpg" alt="Photo 2">
+            </div>
+        </div>
+
+        <div class="wedding-info reveal fade-up">
+            <p class="time-text">LỄ THÀNH HÔN ĐƯỢC TỔ CHỨC<br>VÀO LÚC <strong>17 GIỜ 30 PHÚT</strong></p>
+
+            <h3>CHỦ NHẬT</h3>
+
+            <div class="date-box">
+                <div class="month">THÁNG 11</div>
+                <div class="day">30</div>
+                <div class="year">NĂM 2025</div>
+            </div>
+
+            <p class="lunar">(Tức ngày 11 tháng 10 năm Ất Tỵ)</p>
+
+            <p class="place-title">NƠI DIỄN RA HÔN LỄ</p>
+            <p class="address">Địa chỉ: La Ngoại, Thanh Miện, Hải Phòng</p>
+
+            <a href="#" class="map-btn">CHỈ ĐƯỜNG</a>
+        </div>
     </div>
 
+    <script>
+        // === Reveal on Scroll ===
+        const reveals = document.querySelectorAll('.reveal');
+        window.addEventListener('scroll', () => {
+            for (let el of reveals) {
+                const rect = el.getBoundingClientRect();
+                if (rect.top < window.innerHeight - 100) {
+                    el.classList.add('visible');
+                }
+            }
+        });
+    </script>
 </body>
 </html>
