--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiệp Cưới Long & Hiền</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Playfair+Display&family=Great+Vibes&family=Monsieur+La+Doulaise&family=Nunito&display=swap" rel="stylesheet">
+    <link rel="stylesheet"href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    
     <style>
         * {
             box-sizing: border-box;
@@ -104,7 +106,56 @@
             font-size: 32px;
             font-weight: bold;
             color: #2f3b52;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
+        }
+
+        /* === Countdown Timer === */
+        .countdown-container {
+            margin: 20px auto 20px;
+            display: flex;
+            justify-content: center;
+            gap: 25px;
+            background: rgba(255,255,255,0.5);
+            border: 1px solid rgba(0,0,0,0.05);
+            border-radius: 16px;
+            padding: 20px 30px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+            backdrop-filter: blur(6px);
+            -webkit-backdrop-filter: blur(6px);
+            animation: fadeInUp 1.5s ease;
+        }
+
+        .countdown-item {
+            text-align: center;
+            color: #2b4e7c;
+        }
+
+            .countdown-item span {
+                display: block;
+                font-size: 25px;
+                font-weight: bold;
+                font-family: 'Nunito', sans-serif;
+                color: #5a7ea1;
+                text-shadow: 0 2px 6px rgba(0,0,0,0.1);
+                animation: glowPulse 2s infinite ease-in-out;
+            }
+
+            .countdown-item small {
+                display: block;
+                font-size: 14px;
+                letter-spacing: 1px;
+                margin-top: 4px;
+                color: #7a8ba8;
+            }
+
+        @keyframes glowPulse {
+            0%,100% {
+                text-shadow: 0 0 6px rgba(173, 203, 255, 0.6);
+            }
+
+            50% {
+                text-shadow: 0 0 14px rgba(173, 203, 255, 0.9);
+            }
         }
 
         /* === Calendar Section === */
@@ -115,9 +166,8 @@
             padding: 20px;
             width: 100%;
             margin-top: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08), 0 10px 20px rgba(0, 0, 0, 0.06), inset 0 1px 1px rgba(255, 255, 255, 0.4);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
             backdrop-filter: blur(6px);
-            -webkit-backdrop-filter: blur(6px);
         }
 
         table {
@@ -173,7 +223,7 @@
             }
 
         @keyframes pulse {
-            0%, 100% {
+            0%,100% {
                 transform: scale(1);
                 opacity: 1;
             }
@@ -253,23 +303,35 @@
             border: 1px solid rgba(0,0,0,0.05);
         }
 
-            .wedding-info .time-text {
-                font-size: 15px;
-                line-height: 1.6;
-                letter-spacing: 0.5px;
-                font-weight: 600;
-                color: #2b4e7c;
-                margin-bottom: 18px;
-            }
+        .wedding-info2 {
+            background: #ffffff;
+            border-radius: 10px;
+            padding: 30px 20px;
+            margin: 0px auto 0;
+            max-width: 380px;
+            text-align: center;
+            color: #1f355e;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+            border: 1px solid rgba(0,0,0,0.05);
+        }
 
-            .wedding-info h3 {
-                font-size: 22px;
-                font-weight: 800;
-                letter-spacing: 1px;
-                color: #2b4e7c;
-                margin-bottom: 12px;
-                font-family: 'Nunito', serif;
-            }
+        .wedding-info .time-text {
+            font-size: 15px;
+            line-height: 1.6;
+            letter-spacing: 0.5px;
+            font-weight: 600;
+            color: #2b4e7c;
+            margin-bottom: 18px;
+        }
+
+        .wedding-info h3 {
+            font-size: 22px;
+            font-weight: 800;
+            letter-spacing: 1px;
+            color: #2b4e7c;
+            margin-bottom: 12px;
+            font-family: 'Nunito', serif;
+        }
 
         .date-box {
             display: flex;
@@ -351,38 +413,6 @@
                 opacity: 1;
                 transform: translateY(0);
             }
-
-        .fade-up.visible {
-            animation: fadeUpAnim 1.2s ease forwards;
-        }
-
-        @keyframes fadeUpAnim {
-            from {
-                opacity: 0;
-                transform: translateY(40px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .zoom-in.visible {
-            animation: zoomIn 1.2s ease forwards;
-        }
-
-        @keyframes zoomIn {
-            from {
-                opacity: 0;
-                transform: scale(0.85);
-            }
-
-            to {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
     </style>
 </head>
 <body>
@@ -419,36 +449,109 @@
         </div>
 
         <div class="wedding-info reveal fade-up">
-            <p class="time-text">LỄ THÀNH HÔN ĐƯỢC TỔ CHỨC<br>VÀO LÚC <strong>17 GIỜ 30 PHÚT</strong></p>
-
+            <p class="time-text">LỄ THÀNH HÔN ĐƯỢC TỔ CHỨC VÀO</p>
             <h3>CHỦ NHẬT</h3>
-
             <div class="date-box">
                 <div class="month">THÁNG 11</div>
                 <div class="day">30</div>
                 <div class="year">NĂM 2025</div>
             </div>
-
             <p class="lunar">(Tức ngày 11 tháng 10 năm Ất Tỵ)</p>
+        </div>
 
+        <div class="countdown-container reveal fade-up">
+            <div class="countdown-item">
+                <span id="days">0</span>
+                <small>Ngày</small>
+            </div>
+            <div class="countdown-item">
+                <span id="hours">0</span>
+                <small>Giờ</small>
+            </div>
+            <div class="countdown-item">
+                <span id="minutes">0</span>
+                <small>Phút</small>
+            </div>
+            <div class="countdown-item">
+                <span id="seconds">0</span>
+                <small>Giây</small>
+            </div>
+        </div>
+
+        <div class="wedding-info2 reveal fade-up">
             <p class="place-title">NƠI DIỄN RA HÔN LỄ</p>
             <p class="address">Địa chỉ: La Ngoại, Thanh Miện, Hải Phòng</p>
 
-            <a href="#" class="map-btn">CHỈ ĐƯỜNG</a>
+            <div id="map"
+                 style="
+                  width: 100%;
+                  height: 150px;
+                  border-radius: 12px;
+                  margin: 16px 0;
+                  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+                  border: 2px solid rgba(0, 0, 0, 0.05);
+                  overflow: hidden;
+                "></div>
+
+            <a href="https://www.google.com/maps/dir/?api=1&destination=20.750467,106.251851&travelmode=driving"
+               target="_blank"
+               class="map-btn">
+                CHỈ ĐƯỜNG
+            </a>
         </div>
+
+
     </div>
 
     <script>
-        // === Reveal on Scroll ===
+        // Scroll animation
         const reveals = document.querySelectorAll('.reveal');
         window.addEventListener('scroll', () => {
             for (let el of reveals) {
                 const rect = el.getBoundingClientRect();
-                if (rect.top < window.innerHeight - 100) {
-                    el.classList.add('visible');
-                }
+                if (rect.top < window.innerHeight - 100) el.classList.add('visible');
             }
         });
+
+        // Countdown timer
+        const targetDate = new Date("November 30, 2025 00:00:00").getTime();
+        const timer = setInterval(() => {
+            const now = new Date().getTime();
+            const distance = targetDate - now;
+            if (distance < 0) {
+                clearInterval(timer);
+                document.querySelector(".countdown-container").innerHTML = "<h3>Đã đến ngày trọng đại 💖</h3>";
+                return;
+            }
+            const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+            document.getElementById("days").textContent = days;
+            document.getElementById("hours").textContent = hours;
+            document.getElementById("minutes").textContent = minutes;
+            document.getElementById("seconds").textContent = seconds;
+        }, 1000);
     </script>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+    <script>
+        // Coordinates for La Ngoại, Thanh Miện, Hải Phòng
+        const coords = [20.750467, 106.251851];
+
+        // Initialize the map
+        const map = L.map('map').setView(coords, 15);
+
+        // Add map tiles
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '',
+        }).addTo(map);
+
+        // Add marker
+        const marker = L.marker(coords).addTo(map);
+        marker.bindPopup("💒 Nơi diễn ra hôn lễ").openPopup();
+    </script>
+
 </body>
 </html>
